feedback and price

--- a/fisherman game/jsPsych/css/jspsych.css
+++ b/fisherman game/jsPsych/css/jspsych.css
@@ -7,6 +7,33 @@
 
  @import url(https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700);
 
+/* create a cross for rod fixing */
+.cross {
+    text-align: center;
+    display: block;
+    font-family: sans-serif;
+}
+
+/* create a price board */
+.blue_box, .green_box {
+    display: block;
+    clear:both;
+}
+.blue_box span {
+    background-color: blue;
+    color: white;
+    padding: 10px 5px;
+    display: block;
+    float: right;
+}
+.green_box span {
+    background-color: green;
+    color: white;
+    padding: 10px 5px;
+    display: block;
+    float: left;
+}
+
 /* Container holding jsPsych content */
 
  .jspsych-display-element {
