--- a/fisherman game gorilla/jsPsych/css/jspsych.css
+++ b/fisherman game gorilla/jsPsych/css/jspsych.css
@@ -87,14 +87,14 @@
   background-image: none;
   border: 1px solid transparent;
   border-radius: 4px;
-  color: #333;
-  background-color: #fff;
-  border-color: #ccc;
+  color: white;
+  background-color: white;
+  border-color: white;
 }
 
 .jspsych-btn:hover {
-  background-color: #ddd;
-  border-color: #aaa;
+  background-color: white;
+  border-color: white;
 }
 
 .jspsych-btn:disabled {
